--- a/style.css
+++ b/style.css
@@ -8,7 +8,11 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #020202 !important;
+    background-color: #020202; 
+    background-image: linear-gradient(#020202, #020202);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     font-family: 'IBM Plex Mono', monospace;
   }
 
